--- a/package.json
+++ b/package.json
@@ -44,9 +44,9 @@
     "@capacitor/splash-screen": "6.0.2",
     "@capacitor/status-bar": "6.0.1",
     "@hypernym/nuxt-gsap": "^2.4.2",
+    "@kimlarocca/capacitor-remote-streamer": "https://github.com/kimlarocca/capacitor-remote-streamer/tarball/main",
     "@nuxt/image": "1.4.0",
     "@nuxtjs/supabase": "1.1.6",
-    "@nypublicradio/capacitor-remote-streamer": "^0.3.6",
     "@sentry/integrations": "^7.114.0",
     "@sentry/tracing": "^7.114.0",
     "@sentry/vue": "^7.118.0",
